package com.xter.design.observe;

public interface IObserver {
	void update(String content);
}
